<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentActivity">

    <Button
        android:id="@+id/Btn_Sms"
        android:layout_width="106dp"
        android:layout_height="64dp"
        android:text="@string/sms"
        android:textColor="#607D8B"
        android:textSize="24sp"
        app:backgroundTint="#FFD180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <Button
        android:id="@+id/Btn_dial"
        android:layout_width="114dp"
        android:layout_height="65dp"
        android:text="@string/dial"
        android:textSize="24sp"
        app:backgroundTint="#090909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/Btn_Call"
        android:layout_width="107dp"
        android:layout_height="66dp"
        android:text="@string/call"
        android:textSize="24sp"
        app:backgroundTint="#5A6CCA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536" />

    <Button
        android:id="@+id/Btn_Camera"
        android:layout_width="155dp"
        android:layout_height="54dp"
        android:text="@string/camera"
        android:textColor="#7B1FA2"
        android:textSize="24sp"
        app:backgroundTint="#BD9393"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/Btn_Share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="24sp"
        app:backgroundTint="#AC3A01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/Btn_Mpesa"
        android:layout_width="139dp"
        android:layout_height="68dp"
        android:text="@string/mpesa"
        android:textColor="#7B1FA2"
        android:textSize="24sp"
        app:backgroundTint="#99A602"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <Button
        android:id="@+id/btn_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"          
        android:layout_marginTop="129dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="554dp"
        android:text="@string/email"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>